Horizontal white space fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,21 +58,21 @@ main {
 }
 
 #hero {
-	width: 100vw;
-	position: relative;
 	text-align: center;
 	color: white;
 
 	img {
-		width: 100vw;
+		width: 100%;
 		height: 500px;
 		z-index: -1;
 		display: block;
 		object-fit: cover;
+		overflow-x: hidden;
 		filter: brightness(50%);
 	}
 
 	div {
+		width: 100%;
 		margin: 0px;
 		padding: 0px;
 		position: absolute;
